--- a/games.html
+++ b/games.html
@@ -249,6 +249,36 @@
   <img src="images/cuttherope.png">
   <div class="game-title">Cut The Rope</div>
 </div>
+
+    <div class="card" onclick="launchGame('games/Soon.html')">
+  <img src="images/soon.png">
+  <div class="game-title">Coming Soon</div>
+</div>
+
+    <div class="card" onclick="launchGame('games/Soon.html')">
+  <img src="images/soon.png">
+  <div class="game-title">Coming Soon</div>
+</div>
+
+    <div class="card" onclick="launchGame('games/Soon.html')">
+  <img src="images/soon.png">
+  <div class="game-title">Coming Soon</div>
+</div>
+
+    <div class="card" onclick="launchGame('games/Soon.html')">
+  <img src="images/soon.png">
+  <div class="game-title">Coming Soon</div>
+</div>
+
+    <div class="card" onclick="launchGame('games/Soon.html')">
+  <img src="images/soon.png">
+  <div class="game-title">Coming Soon</div>
+</div>
+
+    <div class="card" onclick="launchGame('games/Soon.html')">
+  <img src="images/soon.png">
+  <div class="game-title">Coming Soon</div>
+</div>
   </div>
 
 
