--- a/games.html
+++ b/games.html
@@ -260,9 +260,9 @@
   <div class="game-title">Coreball</div>
 </div>
 
-    <div class="card" onclick="launchGame('games/Soon.html')">
-  <img src="images/soon.png">
-  <div class="game-title">Coming Soon</div>
+    <div class="card" onclick="launchGame('games/Bitlife.html')">
+  <img src="images/bitlife.png">
+  <div class="game-title">Bitlife</div>
 </div>
 
     <div class="card" onclick="launchGame('games/Soon.html')">
