--- a/games.html
+++ b/games.html
@@ -209,7 +209,7 @@
   <div class="game-title">Crossy Road</div>
 </div>
 
-    <div class="card" onclick="launchGame('games/game21.html')">
+    <div class="card" onclick="launchGame('games/CircloO.html')">
   <img src="images/circloO.png">
   <div class="game-title">CircloO</div>
 </div>
@@ -255,7 +255,7 @@
   <div class="game-title">DOOM II</div>
 </div>
 
-    <div class="card" onclick="launchGame('games/Bitlife.html')">
+    <div class="card" onclick="launchGame('games/BitLife.html')">
   <img src="images/bitlife.png">
   <div class="game-title">Bitlife</div>
 </div>
