--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>PRTY</title>
+  <title>Dashboard</title>
   <link rel="icon" type="image/png" href="assets/canvascloak.png">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -19,7 +19,7 @@
   <a href="credits.html">Credits</a>
   <a class="discord-btn" href="https://discord.gg/MdNsPVTJGv" target="_blank">Discord</a>
 </div>
-
+  
 <button class="toggle" onclick="toggleSidebar()">☰</button>
 
 
@@ -40,11 +40,11 @@
 
   <div class="updates-section">
     <h2>PRTY Updates</h2>
-    <h3 class="subtitle">Updates - Website Release</h3>
+    <h3 class="subtitle">Updates - V1.1</h3>
     <ul class="updates-list">
-      <li>New</li>
-      <li>Update</li>
-      <li>Coming Soon</li>
+      <li>Added More Games, Movies, and Manga</li>
+      <li>Working on a Proxy (soon)</li>
+      <li>If i know you, hi</li>
 
       <p><strong>REPORT ANY BUGS</strong>, go to the discord and report ant game, website, or movie bug to PRTY Website Devs. Join our Bug Hunter Program! DM rveprty. or rveprty.main if you have any questions.</p>
 
