--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
 
 </div>
 
+  <!-- PANIC OVERLAY -->
+<div id="panic-overlay">
+  <div class="panic-box">
+    <h1>🚨 ABORT WEBSITE 🚨</h1>
+    <p>REDIRECTING YOU TO CLASSLINK!!!!</p>
+    <p id="panic-countdown">Redirecting in 3...</p>
+    <button onclick="cancelPanic()">Cancel</button>
+  </div>
+</div>
+
 <script src="js/main.js"></script>
 </body>
 </html>
