--- a/apps/weather-battery.html
+++ b/apps/weather-battery.html
@@ -4,42 +4,70 @@
   <title>Weather & Battery</title>
   <style>
     body {
-      background: #0b0f1a;
+      margin: 0;
+      min-height: 100vh;
+      background: linear-gradient(135deg, #0b0f1a, #141a2e);
       color: #fff;
-      font-family: Arial;
+      font-family: Arial, sans-serif;
       padding: 20px;
     }
+
+    h1 {
+      margin-bottom: 20px;
+      font-size: 1.6rem;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      gap: 15px;
+    }
+
     .card {
       background: #141a2e;
-      padding: 15px;
-      border-radius: 10px;
-      margin-bottom: 15px;
+      padding: 20px;
+      border-radius: 14px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.35);
+    }
+
+    .label {
+      opacity: 0.8;
+      font-size: 0.9rem;
+    }
+
+    .value {
+      font-size: 1.4rem;
+      margin-top: 8px;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
 
-<h1>System Info</h1>
+<h1>System Overview</h1>
 
-<div class="card">
-  <h2>Battery</h2>
-  <p id="battery">Loading...</p>
-</div>
+<div class="grid">
+  <div class="card">
+    <div class="label">🔋 Battery Status</div>
+    <div class="value" id="battery">Loading…</div>
+  </div>
 
-<div class="card">
-  <h2>Weather</h2>
-  <p id="weather">Loading weather...</p>
+  <div class="card">
+    <div class="label">🌦 Current Weather</div>
+    <div class="value" id="weather">Loading…</div>
+  </div>
 </div>
 
 <script>
 // BATTERY
 if (navigator.getBattery) {
-  navigator.getBattery().then(b => {
+  navigator.getBattery().then(battery => {
+    const percent = Math.round(battery.level * 100);
     document.getElementById("battery").innerText =
-      Math.round(b.level * 100) + "% " + (b.charging ? "(Charging)" : "");
+      percent + "% " + (battery.charging ? "(Charging)" : "");
   });
 } else {
-  document.getElementById("battery").innerText = "Battery info unavailable";
+  document.getElementById("battery").innerText = "Unavailable";
 }
 
 // WEATHER (Open-Meteo)
@@ -52,13 +80,13 @@ navigator.geolocation.getCurrentPosition(pos => {
     .then(data => {
       const w = data.current_weather;
       document.getElementById("weather").innerText =
-        `Temperature: ${w.temperature}°C | Wind: ${w.windspeed} km/h`;
+        `${w.temperature}°C • Wind ${w.windspeed} km/h`;
     })
     .catch(() => {
       document.getElementById("weather").innerText = "Weather unavailable";
     });
 }, () => {
-  document.getElementById("weather").innerText = "Location permission denied";
+  document.getElementById("weather").innerText = "Location denied";
 });
 </script>
 
