--- a/credits.html
+++ b/credits.html
@@ -100,18 +100,18 @@
 
   <div class="background-animation"></div>
 
-  <div class="sidebar" id="sidebar">
-    <h2>PRTY</h2>
-    <a href="index.html">Home</a>
-    <a href="games.html">Games</a>
-    <a href="apps.html">Apps</a>
-    <a href="movies.html">Movies</a>
-    <a href="manga.html">Manga & Books (Google Drive)</a>
-    <a href="proxy.html">Proxy</a>
-    <a href="credits.html">Credits</a>
-  </div>
-
-  <button class="toggle" onclick="toggleSidebar()">☰</button>
+ <div class="sidebar" id="sidebar">
+  <h2>PRTY</h2>
+  <a href="index.html">Home</a>
+  <a href="games.html">Games</a>
+  <a href="apps.html">Apps</a>
+  <a href="movies.html">Movies</a>
+  <a href="manga.html">Manga</a>
+  <a href="proxy.html">Proxy</a>
+  <a href="credits.html">Credits</a>
+  <a class="discord-btn" href="https://discord.gg/MdNsPVTJGv" target="_blank">Discord</a>
+  <button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
+</div>
 
   <div class="main">
     <h1 class="page-title">✨ Credits</h1>
