--- a/credits.html
+++ b/credits.html
@@ -128,9 +128,9 @@
         <p>Helper / Link & Movie Provider</p>
       </div>
       <div class="credit-card">
-        <img src="images/special.png" alt="Special Thanks">
-        <h3>Special Thanks</h3>
-        <p>Beta Testers</p>
+        <img src="images/credits 2.webp" alt="Special Thanks">
+        <h3>Thomasplayz</h3>
+        <p>Developer / Proxy Developer</p>
       </div>
       <div class="credit-card">
         <img src="images/lvl2.jpg" alt="Bug Hunter 2">
