--- a/games.html
+++ b/games.html
@@ -260,17 +260,42 @@
   <div class="game-title">Bitlife</div>
 </div>
 
-    <div class="card" onclick="launchGame('games/Soon.html')">
+    <div class="card" onclick="launchGame('games/Bazooka Boy.html')">
+  <img src="images/bazooka_boy.png">
+  <div class="game-title">Bazooka Boy</div>
+</div>
+
+    <div class="card" onclick="launchGame('games/Candy Crush.html')">
+  <img src="images/candy_crush.png">
+  <div class="game-title">Candy Crush</div>
+</div>
+
+    <div class="card" onclick="launchGame('games/Coooking Mama.html')">
+  <img src="images/cooking_mama.png">
+  <div class="game-title">Cooking Mama</div>
+</div>
+
+      <div class="card" onclick="launchGame('games/Soon.html')">
   <img src="images/soon.png">
   <div class="game-title">Coming Soon</div>
 </div>
 
-    <div class="card" onclick="launchGame('games/Soon.html')">
+      <div class="card" onclick="launchGame('games/Soon.html')">
   <img src="images/soon.png">
   <div class="game-title">Coming Soon</div>
 </div>
 
-    <div class="card" onclick="launchGame('games/Soon.html')">
+      <div class="card" onclick="launchGame('games/Soon.html')">
+  <img src="images/soon.png">
+  <div class="game-title">Coming Soon</div>
+</div>
+
+      <div class="card" onclick="launchGame('games/Soon.html')">
+  <img src="images/soon.png">
+  <div class="game-title">Coming Soon</div>
+</div>
+
+      <div class="card" onclick="launchGame('games/Soon.html')">
   <img src="images/soon.png">
   <div class="game-title">Coming Soon</div>
 </div>
