--- a/games.html
+++ b/games.html
@@ -275,9 +275,9 @@
   <div class="game-title">Cooking Mama</div>
 </div>
 
-      <div class="card" onclick="launchGame('games/Soon.html')">
-  <img src="images/soon.png">
-  <div class="game-title">Coming Soon</div>
+      <div class="card" onclick="launchGame('games/osu!.html')">
+  <img src="images/osu.png">
+  <div class="game-title">Osu!</div>
 </div>
 
       <div class="card" onclick="launchGame('games/Soon.html')">
