--- a/apps/ai.html
+++ b/apps/ai.html
@@ -56,7 +56,7 @@
 
   <div class="main">
     <iframe 
-      src="https://learn-math.b-cdn.net/"
+      src="mathematical-learning.b-cdn.net"
       class="embed-frame"
       allow="fullscreen"
       loading="lazy">
