--- a/apps.html
+++ b/apps.html
@@ -42,27 +42,27 @@
 </div>
 
 <div class="card" onclick="window.open('https://clever-assets-6b.b-cdn.net/apps/cheatsheet.html','_blank')">
-  <img src="assets/notepad.png">
+  <img src="assets/cheatsheet.png">
   <div class="game-title">Cheat Sheet</div>
 </div>
     
 <div class="card" onclick="window.open('https://clever-assets-6b.b-cdn.net/apps/calculator.html','_blank')">
-  <img src="assets/notepad.png">
+  <img src="assets/calculator.jpg">
   <div class="game-title">Calculator</div>
 </div>
     
     <div class="card" onclick="window.open('https://clever-assets-6b.b-cdn.net/apps/emergency.html','_blank')">
-  <img src="assets/notepad.png">
+  <img src="assets/useforemergencies.png">
   <div class="game-title">Use For Emergencies</div>
 </div>
 
   <div class="card" onclick="window.open('https://clever-assets-6b.b-cdn.net/apps/weather-battery.html','_blank')">
-  <img src="assets/notepad.png">
+  <img src="assets/weather.avif">
   <div class="game-title">Weather</div>
 </div>
 
   <div class="card" onclick="window.open('https://clever-assets-6b.b-cdn.net/apps/timer.html','_blank')">
-  <img src="assets/notepad.png">
+  <img src="assets/stopwatch.jpg">
   <div class="game-title">Stopwatch</div>
 </div>
 
