--- a/credits.html
+++ b/credits.html
@@ -129,7 +129,7 @@
         <p>Helper / Link & Movie Provider</p>
       </div>
       <div class="credit-card">
-        <img src="images/credits 2.webp" alt="Special Thanks">
+        <img src="assets/thomas.webp" alt="Special Thanks">
         <h3>Thomasplayz</h3>
         <p>Developer / Proxy Developer</p>
       </div>
