--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       <li>Added More Games, Movies, and Manga</li>
       <li>Thomasplayz made a proxy so W in the chat</li>
       <li>Refixed the sidebar</li>
+      <li>We also added PRTY AI</li>
 
       <p><strong>REPORT ANY BUGS</strong>, go to the discord and report ant game, website, or movie bug to PRTY Website Devs. Join our Bug Hunter Program! DM rveprty. or rveprty.main if you have any questions.</p>
 
