--- a/credits.html
+++ b/credits.html
@@ -121,17 +121,17 @@
       <div class="credit-card">
         <img src="images/dev.jpg" alt="Developer">
         <h3>RVEPRTY</h3>
-        <p>Developer / Designer</p>
+        <p>Creator / Developer / Designer</p>
       </div>
       <div class="credit-card">
         <img src="images/virgo.png" alt="Virgo">
         <h3>Virgo/Offensive Asian</h3>
-        <p>Helper / Link & Movie Provider</p>
+        <p>Helper / Link & Movie Provider/ hi</p>
       </div>
       <div class="credit-card">
         <img src="assets/thomas.webp" alt="Special Thanks">
         <h3>Thomasplayz</h3>
-        <p>Developer / Proxy Developer</p>
+        <p>Developer / Proxy Developer / Admin</p>
       </div>
       <div class="credit-card">
         <img src="images/lvl2.jpg" alt="Bug Hunter 2">
