--- a/games.html
+++ b/games.html
@@ -281,25 +281,53 @@
   <div class="game-title">Osu!</div>
 </div>
 
+      <div class="card" onclick="launchGame('games/Ultimate Custom Night.html')">
+  <img src="images/ucn.png">
+  <div class="game-title">UCN (Soon)</div>
+</div>
+
       <div class="card" onclick="launchGame('games/Soon.html')">
+  <img src="images/ducklife.png">
+  <div class="game-title">Ducklife (soon)</div>
+</div>
+
+      <div class="card" onclick="launchGame('games/Soon.html')">
+  <img src="images/hotlinemiami.png">
+  <div class="game-title">Hotline Miami (Soon)</div>
+</div>
+
+      <div class="card" onclick="launchGame('games/Soon.html')">
+  <img src="images/backrooms.png">
+  <div class="game-title">Backrooms (Soon)</div>
+</div>
+
+    <div class="card" onclick="launchGame('games/Soon.html')">
   <img src="images/soon.png">
   <div class="game-title">Coming Soon</div>
 </div>
 
-      <div class="card" onclick="launchGame('games/Soon.html')">
-  <img src="images/soon.png">
-  <div class="game-title">Coming Soon</div>
+    <div class="card" onclick="launchGame('games/Soon.html')">
+  <img src="images/bic.png">
+  <div class="game-title">Bad Ice-Cream (Soon)</div>
 </div>
 
-      <div class="card" onclick="launchGame('games/Soon.html')">
-  <img src="images/soon.png">
-  <div class="game-title">Coming Soon</div>
+    <div class="card" onclick="launchGame('games/Soon.html')">
+  <img src="images/bic2.png">
+  <div class="game-title">Bad Ice-Cream 2</div>
 </div>
 
-      <div class="card" onclick="launchGame('games/Soon.html')">
-  <img src="images/soon.png">
-  <div class="game-title">Coming Soon</div>
+    <div class="card" onclick="launchGame('games/Soon.html')">
+  <img src="images/bic3.png">
+  <div class="game-title">Bad Ice-Cream 3 (Soon)</div>
 </div>
+
+    <div class="card" onclick="launchGame('games/Soon.html')">
+  <img src="images/son.png">
+  <div class="game-title">Soon</div>
+</div>
+
+    
+
   </div>
 
 
