--- a/games.html
+++ b/games.html
@@ -281,9 +281,9 @@
   <div class="game-title">Osu!</div>
 </div>
 
-      <div class="card" onclick="launchGame('games/Ultimate Custom Night.html')">
+      <div class="card" onclick="launchGame('games/Five Nights at Freddy's_ Ultimate Custom Night.html')">
   <img src="images/ucn.png">
-  <div class="game-title">UCN (Soon)</div>
+  <div class="game-title">UCN</div>
 </div>
 
       <div class="card" onclick="launchGame('games/Soon.html')">
