--- a/proxy.html
+++ b/proxy.html
@@ -1,39 +1,98 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
-  <title>Dashboard</title>
+  <title>Proxy</title>
   <link rel="icon" type="image/png" href="assets/canvascloak.png">
   <link rel="stylesheet" href="css/style.css">
 
   <style>
+    :root {
+      --prty-bg-1: #0f172a;   /* exact dark blue */
+      --prty-bg-2: #1e3a8a;   /* exact gradient blue */
+      --prty-accent: #2563eb; /* exact button blue */
+    }
+
     /* Fullscreen iframe behind everything */
     .proxy-frame {
       position: fixed;
-      inset: 0; /* shorthand for top:0; left:0; right:0; bottom:0 */
+      inset: 0;
       width: 100vw;
       height: 100vh;
       border: none;
-      margin: 0;
-      padding: 0;
-      z-index: 1; /* stays behind sidebar */
+      z-index: 1;
     }
 
-    /* Force sidebar + toggle above iframe */
-    .sidebar {
-      position: fixed; /* ensures it stays on top */
-      z-index: 9999;
-    }
-
-    .toggle {
+    /* Container to the right of the sidebar */
+    .proxy-container {
       position: fixed;
-      z-index: 10000; /* above sidebar */
+      top: 0;
+      left: 250px; /* your sidebar width */
+      width: calc(100vw - 250px);
+      height: 100vh;
+      z-index: 9000;
+      pointer-events: none;
+    }
+
+    /* prty-learning gradient background */
+    .proxy-select-screen {
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(135deg, var(--prty-bg-1), var(--prty-bg-2));
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      pointer-events: auto;
+      padding: 20px;
+      box-sizing: border-box;
+    }
+
+    /* Floating white card */
+    .proxy-card {
+      background: white;
+      width: 420px;
+      padding: 35px 40px;
+      border-radius: 18px;
+      box-shadow: 0 12px 35px rgba(0, 0, 0, 0.25);
+      text-align: center;
+      animation: fadeIn 0.4s ease;
+    }
+
+    .proxy-card h1 {
+      margin: 0 0 25px 0;
+      font-size: 28px;
+      font-weight: 700;
+      color: var(--prty-accent);
+    }
+
+    .proxy-card button {
+      width: 100%;
+      background: var(--prty-accent);
+      color: white;
+      border: none;
+      padding: 14px 0;
+      border-radius: 10px;
+      font-size: 17px;
+      font-weight: 600;
+      cursor: pointer;
+      margin-top: 12px;
+      transition: 0.2s;
+    }
+
+    .proxy-card button:hover {
+      background: var(--prty-bg-2);
+      transform: translateY(-2px);
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to   { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 
 <body class="proxy-page">
 
-<!-- SIDEBAR (UNCHANGED) -->
+<!-- SIDEBAR (unchanged) -->
 <div class="sidebar" id="sidebar">
   <h2>PRTY</h2>
   <a href="index.html">Home</a>
@@ -42,19 +101,37 @@
   <a href="movies.html">Movies</a>
   <a href="manga.html">Manga</a>
   <a href="proxy.html">Proxy</a>
-  <a href="credits.html">Credits</a>
   <a class="discord-btn" href="https://discord.gg/MdNsPVTJGv" target="_blank">Discord</a>
   <button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
 </div>
 
+<!-- SELECTOR -->
+<div class="proxy-container">
+  <div id="proxySelect" class="proxy-select-screen">
+    <div class="proxy-card">
+      <h1>Select a Proxy</h1>
+
+      <button onclick="
+        document.getElementById('proxyFrame').src='https://mathlete-education.b-cdn.net/';
+        document.getElementById('proxySelect').style.display='none';
+      ">
+        Scramjet
+      </button>
+
+      <button onclick="
+        document.getElementById('proxyFrame').src='https://prty-learning.b-cdn.net/';
+        document.getElementById('proxySelect').style.display='none';
+      ">
+        Ultraviolet
+      </button>
+    </div>
+  </div>
+</div>
+
 <!-- FULLSCREEN IFRAME -->
-<iframe 
-  src="https://prty-learning.b-cdn.net"
-  class="proxy-frame"
-  allow="fullscreen"
-  loading="lazy">
-</iframe>
+<iframe id="proxyFrame" class="proxy-frame" allow="fullscreen" loading="lazy"></iframe>
 
 <script src="js/main.js"></script>
+
 </body>
 </html>
