--- a/credits.html
+++ b/credits.html
@@ -130,8 +130,8 @@
       </div>
       <div class="credit-card">
         <img src="assets/thomas.webp" alt="Special Thanks">
-        <h3>Thomasplayz</h3>
-        <p>Developer / Proxy Developer / Admin</p>
+        <h3>Special Thanks</h3>
+        <p>Thomasplayz - Proxy Developer</p>
       </div>
       <div class="credit-card">
         <img src="images/lvl2.jpg" alt="Bug Hunter 2">
