--- a/games.html
+++ b/games.html
@@ -281,29 +281,29 @@
   <div class="game-title">Osu!</div>
 </div>
 
-      <div class="card" onclick="launchGame('games/Five Nights at Freddy's_ Ultimate Custom Night.html')">
+      <div class="card" onclick="launchGame('games/Five Nights at Freddys_ Ultimate Custom Night.html')">
   <img src="images/ucn.png">
   <div class="game-title">UCN</div>
 </div>
 
-      <div class="card" onclick="launchGame('games/Soon.html')">
+      <div class="card" onclick="launchGame('games/ Duck Life.html')">
   <img src="images/ducklife.png">
-  <div class="game-title">Ducklife (soon)</div>
+  <div class="game-title">Ducklife</div>
 </div>
 
-      <div class="card" onclick="launchGame('games/Soon.html')">
+      <div class="card" onclick="launchGame('games/Hotline Miami.html')">
   <img src="images/hotlinemiami.png">
-  <div class="game-title">Hotline Miami (Soon)</div>
+  <div class="game-title">Hotline Miami</div>
 </div>
 
-      <div class="card" onclick="launchGame('games/Soon.html')">
+      <div class="card" onclick="launchGame('games/Backrooms.html')">
   <img src="images/backrooms.png">
-  <div class="game-title">Backrooms (Soon)</div>
+  <div class="game-title">Backrooms</div>
 </div>
 
-    <div class="card" onclick="launchGame('games/Soon.html')">
+    <div class="card" onclick="launchGame('games/Bad Ice Cream.html')">
   <img src="images/bic.png">
-  <div class="game-title">Bad Ice-Cream (Soon)</div>
+  <div class="game-title">Bad Ice-Cream</div>
 </div>
 
     <div class="card" onclick="launchGame('games/Soon.html')">
