--- a/radio.html
+++ b/radio.html
@@ -34,6 +34,10 @@
     <button onclick="loadStation(2)">⚡ Energy</button>
     <button onclick="loadStation(3)">🧊 Chill</button>
   </div>
+  <div class="radio-proxy">
+    <p>⚠️ Music not loading?</p>
+    <button onclick="openRadioProxy()">🎧 Open PRTY Radio (Unblocked)</button>
+  </div>
 
   <!-- Player -->
   <div class="radio-player">
