--- a/radio.html
+++ b/radio.html
@@ -29,10 +29,10 @@
 
   <!-- Station Buttons -->
   <div class="radio-stations">
-    <button onclick="selectStation(0. 'Main')">🔥 Main</button>
-    <button onclick="loadStation(1)">🌙 Late Night</button>
-    <button onclick="loadStation(2)">⚡ Energy</button>
-    <button onclick="loadStation(3)">🧊 Chill</button>
+    <button onclick="selectStation(0, 'Main')">🔥 Main</button>
+    <button onclick="selectStation(1, 'Late Night')">🌙 Late Night</button>
+    <button onclick="selectStation(2, 'Energy')">⚡ Energy</button>
+    <button onclick="selectStation(3, 'Chill')">🧊 Chill</button>
   </div>
   <div class="radio-proxy">
     <p>⚠️ Music not loading?</p>
