Update proxyFrame source for Ultraviolet button

--- a/proxy.html
+++ b/proxy.html
@@ -119,7 +119,7 @@
       </button>
 
       <button onclick="
-        document.getElementById('proxyFrame').src='https://prty-learning.b-cdn.net/';
+        document.getElementById('proxyFrame').src='https://clever-assets-6b.b-cdn.net/error.html';
         document.getElementById('proxySelect').style.display='none';
       ">
         Ultraviolet
